--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -203,7 +203,7 @@ ul {
 
 /* line 44, /Users/itomblack/Repos/svg-animation/src/sass/styles.scss */
 html, body {
-  background-color: #E94F7E;
+  background-color: white;
   color: black;
   font-family: sans-serif;
   line-height: 1.4; }
