--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -42,7 +42,7 @@ ul {
 
 html,
 body {
-  background-color: $pink;
+  background-color: $paper;
   color: $ink;
   font-family: sans-serif;
   line-height: 1.4;
